# GstVlmVision

./: .gitignore  CLAUDE.md  Dockerfile  README.md
docs/: gst_inspect_vlmvision.txt  output-modes.md  properties.md  template-mode.md
examples/: multi_frame_example.py  vlm_vision_example.c  vlm_vision_example.py  vlm_vision_example2.c
gst-vlm-plugin/: entrypoint.sh  meson.build
gst-vlm-plugin/src/: gstvlmvision.c  gstvlmvision.h  gstvlmvisionmeta.c  gstvlmvisionmeta.h  http-client.c  http-client.h  jpeg-encoder.c  jpeg-encoder.h  plugin.c  queue-policy.c  queue-policy.h  response-parser-openai-chat.c  response-parser-openai-chat.h  response-parser-template.c  response-parser-template.h  serializer-openai-chat.c  serializer-openai-chat.h  serializer-template.c  serializer-template.h  template-engine.c  template-engine.h  vlm-backend.h  vlm-capability.c  vlm-capability.h  vlm-request.h  vlm-result.h  vlm-serializer.h
tests/: mock_server.py  requirements.txt
